--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-# Enhanced Requirements with Sentence Transformers
 Flask==3.1.2
-sentence-transformers==3.0.1
-scikit-learn==1.5.1
-numpy==2.1.1
+requests==2.32.3
+python-dotenv==1.0.1
