--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-API_KEY=your_api_key_here
-API_URL=your_api_url_here
-MODEL_NAME=your_model_name_here
+
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# can be changed if you want a different version
+MODEL_NAME=gemini-1.5-flash
